--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <img src="/home/arjun_freekz/Documents/Web_development/Web_development/assets/images/logo.svg">
         <ul>
             <li><a href="">Home</a></li>
-            <li><a href="/home/arjun_freekz/Documents/Web_development/Web_development/Club Mahindra Website/rooms.html" target="_blank">Rooms</a></li>
-            <li><a href="/home/arjun_freekz/Documents/Web_development/Web_development/Club Mahindra Website/inquiry.html" target="_blank">Inquiry</a></li>
+            <li><a href="/home/arjun_freekz/Web/Web_Development/rooms.html" target="_blank">Rooms</a></li>
+            <li><a href="/home/arjun_freekz/Web/Web_Development/inquiry.html" target="_blank">Inquiry</a></li>
         </ul>
         <img src="/home/arjun_freekz/Documents/Web_development/Web_development/assets/images/hero.jpg" alt="Aerial view of the resort">
         <p><h1>Club Mahindra Asonara, Goa</h1></p>
