--- a/rooms.html
+++ b/rooms.html
@@ -5,9 +5,9 @@
     <body>
         <img src="/home/arjun_freekz/Documents/Web_development/Web_development/assets/images/logo.svg">
         <ul>
-            <li><a href="/home/arjun_freekz/Documents/Web_development/Web_development/Club Mahindra Website/index.html">Home</a></li>
-            <li><a href="/home/arjun_freekz/Documents/Web_development/Web_development/Club Mahindra Website/rooms.html">Rooms</a></li>
-            <li><a href="/home/arjun_freekz/Documents/Web_development/Web_development/Club Mahindra Website/inquiry.html">Inquiry</a></li>
+            <li><a href="/home/arjun_freekz/Web/Web_Development/index.html">Home</a></li>
+            <li><a href="/home/arjun_freekz/Web/Web_Development/rooms.html">Rooms</a></li>
+            <li><a href="/home/arjun_freekz/Web/Web_Development/inquiry.html">Inquiry</a></li>
         </ul>
         <h1>Rooms</h1>
         <p>
